--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body, h1, h2, ul, li {
 /* Body Styling */
 body {
     font-family: Arial, sans-serif;
-    background: url('background.jpg') no-repeat center center fixed;
+    background-color: rgba(200,173,127,1);
     background-size: cover;
     color: #fff;
     text-align: center;
