--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     font-family: Arial, sans-serif;
     background-color: rgba(200,173,127,1);
     background-size: cover;
-    color: #fff;
+    color: #231E19;
     text-align: center;
 }
 
@@ -38,7 +38,7 @@ header {
 }
 
 .zines a {
-    color: #ffd700;
+    color: #231E19;
     text-decoration: none;
     font-size: 1.2em;
 }
