Remove CSS reset styles
Remove CSS reset styles for margins and padding.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,1 @@
-/* Reset defaults */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+/*want the page to be black with white text*/
