--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     background-color: #000000; /* black */
     color: #ffffff;           /* white */
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-family: "Courier Prime", "Courier New", Courier, monospace;
 }
 
 a {
